# Pong

./: .gitignore  CMakeLists.txt  LICENSE  run
.cache/clangd/index/: callbacks.cpp.53D25AFC8B3FFE24.idx  callbacks.hpp.701AC7FD31757BBB.idx  context.c.5AAD9BF320EF8785.idx  core.cpp.1ECFDE4D0A07EA4B.idx  core.hpp.795990771B5805B7.idx  egl_context.c.B32413D7B020268F.idx  fractional-scale-v1-client-protocol-code.h.9FD1559021FC8CA7.idx  fractional-scale-v1-client-protocol.h.0BDBC4437E5A5925.idx  glad.c.D154EC5D53EE924D.idx  glad.h.10A4CA735B525A4B.idx  glfw3.h.45CA97FC5BBFB658.idx  glfw3native.h.0B8AD1A4ECCC4E1F.idx  glx_context.c.D0A797745E664D02.idx  idle-inhibit-unstable-v1-client-protocol-code.h.52BC1584635C08EC.idx  idle-inhibit-unstable-v1-client-protocol.h.00430C5C0F8C610F.idx  init.c.52E3944F35253A71.idx  input.c.9B241F734011A562.idx  internal.h.0717D4A731DE25A1.idx  linux_joystick.c.4392B30697128F14.idx  linux_joystick.h.C1E7EEA599D5B92E.idx  main.cpp.DF47BB5B41296B45.idx  main.hpp.E37281DB2FA146DA.idx  mappings.h.B3D34E9B4EBD4CF5.idx  monitor.c.4F5A48002026448C.idx  null_init.c.C0559ECFDBF42F95.idx  null_joystick.c.F1FC8CD979A11D9D.idx  null_joystick.h.167DD73EEBAAE522.idx  null_monitor.c.E18107BC1A918971.idx  null_platform.h.1636770B8406F390.idx  null_window.c.59778BC19241A100.idx  osmesa_context.c.D5F47341FF260A2F.idx  platform.c.9627E60761A32CF1.idx  platform.h.D385921FAEE5B4BF.idx  playground.cpp.658FBE69583F7E74.idx  playground.cpp.80C17A45ED6CBE14.idx  pointer-constraints-unstable-v1-client-protocol-code.h.2FD20566F0584C11.idx  pointer-constraints-unstable-v1-client-protocol.h.A0726086295F9F2C.idx  posix_module.c.82C1FD6B5B6FB8FB.idx  posix_poll.c.5F68219EDEF98B87.idx  posix_poll.h.A0E02FB0EA7748D6.idx  (+30 more)
cmake/: GenerateMappings.cmake  cmake_uninstall.cmake.in  i686-w64-mingw32-clang.cmake  i686-w64-mingw32.cmake  x86_64-w64-mingw32-clang.cmake  x86_64-w64-mingw32.cmake
src/: callbacks.cpp  main.cpp  main.hpp  scene.hpp
src/glad/: CMakeLists.txt  glad.c  glad.h
src/glad/headers/glad/: glad.h
src/glfw/: CMakeLists.txt  internal.h
src/pong/: CMakeLists.txt  callbacks.cpp  callbacks.hpp  core.cpp  core.hpp  def.hpp
src/pong/Scenes/: playground.cpp
src/pong/render/: shader.cpp  shader.hpp
src/pong/scene/: playground.cpp  scene.hpp  scene.template
test/: make
