CMAKE_MINIMUM_REQUIRED(VERSION 3.25)
PROJECT(Pong C CXX)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(glfw3 REQUIRED)
FIND_PACKAGE(glm REQUIRED)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)

FILE(GLOB_RECURSE SRCS "src/*.c" "src/*.cpp" "src/*.h" "src/*.hpp")
ADD_EXECUTABLE(Pong ${SRCS})
TARGET_INCLUDE_DIRECTORIES(Pong PRIVATE src)
TARGET_LINK_LIBRARIES(Pong PRIVATE OpenGL::GL glfw glm)

