CMAKE_MINIMUM_REQUIRED(VERSION 3.25)

PROJECT(Pong C CXX)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_C_STANDARD 17)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(glfw3 REQUIRED)
FIND_PACKAGE(glm REQUIRED)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")

FILE(GLOB_RECURSE SRCS "src/*.c" "src/*.cpp" "src/*.h" "src/*.hpp")
ADD_EXECUTABLE(Pong ${SRCS})
TARGET_INCLUDE_DIRECTORIES(Pong PRIVATE src)
TARGET_LINK_LIBRARIES(Pong PRIVATE OpenGL::GL glfw)
TARGET_LINK_OPTIONS(Pong PRIVATE -static)
